fix(popover): ensure proper visibility handling on initial load

--- a/packages/core/src/components/popover-core/tds-popover-core.scss
+++ b/packages/core/src/components/popover-core/tds-popover-core.scss
@@ -1,13 +1,14 @@
 @import '../../global/motion';
 
 :host {
+  visibility: hidden;
   opacity: 0;
-  transition: 
-        opacity $popover-core-transition;
+  transition: opacity $popover-core-transition;
   pointer-events: none;
 }
 
 :host(.is-shown) {
+  visibility: visible;
   opacity: 1;
   pointer-events: auto;
 }
